--- a/nginx-errors.conf
+++ b/nginx-errors.conf
@@ -39,7 +39,7 @@ error_page 508 errors/508.html;
 error_page 510 errors/510.html;
 error_page 511 errors/511.html;
 
-location ^~ errors/ {
+location /errors {
   ssi on;
   internal;
   root /usr/share/nginx/error-pages/;
